added details for race, language, trait

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,8 @@
         <ion-list>
           <ion-item routerLink="/">Home</ion-item>
           <ion-item routerLink="races">Races</ion-item>
+          <ion-item routerLink="languages">Languages</ion-item>
+          <ion-item routerLink="traits">Traits</ion-item>
           <ion-item routerLink="about">About</ion-item>
         </ion-list>
       </ion-menu-toggle>
