--- a/src/app/pages/races/races.page.html
+++ b/src/app/pages/races/races.page.html
@@ -10,10 +10,18 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" >
+  <ion-searchbar *ngIf="searchactive"></ion-searchbar>
   <ion-list>
-    <ion-item *ngFor="let race of (races | async)">
-      <ion-label>{{race.name}}</ion-label>
+    <ion-item-sliding *ngFor="let race of (races | async)">
+    <ion-item>
+      <ion-label>{{race.name}} </ion-label>
+      <ion-label slot="end"><ion-icon name="star" class="base"></ion-icon></ion-label>
     </ion-item>
+    <ion-item-options side="end">
+      <ion-item-option [routerLink]="race.index"><ion-icon slot="icon-only" name="folder-outline"></ion-icon></ion-item-option>
+      <ion-item-option ><ion-icon slot="icon-only" name="trash-outline"></ion-icon></ion-item-option>
+    </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
   <ion-fab horizontal="end" vertical="bottom" slot="fixed" >
     <ion-fab-button size="small">
@@ -23,7 +31,7 @@
       <ion-fab-button routerLink="/">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button>
+      <ion-fab-button (click)="SearchbarActive()">
         <ion-icon name="search-outline"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
