fixed darkmode, added android build v1

--- a/src/app/pages/races/race/race.page.html
+++ b/src/app/pages/races/race/race.page.html
@@ -80,4 +80,9 @@
       </ion-card-content>
     </ion-card>
   </div>
+  <ion-fab horizontal="end" vertical="bottom" slot="fixed" >
+    <ion-fab-button size="small">
+      <ion-icon name="share-social-outline" (click)="Share()"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
