--- a/src/app/pages/races/races.page.html
+++ b/src/app/pages/races/races.page.html
@@ -12,16 +12,15 @@
 <ion-content [fullscreen]="true" >
   <ion-searchbar *ngIf="searchactive"></ion-searchbar>
   <ion-list>
-    <ion-item-sliding *ngFor="let race of (races | async)">
-    <ion-item>
+    <ion-item *ngFor="let race of (races | async)" [routerLink]="race.index">
       <ion-label>{{race.name}} </ion-label>
       <ion-label slot="end"><ion-icon name="star" class="base"></ion-icon></ion-label>
     </ion-item>
-    <ion-item-options side="end">
-      <ion-item-option [routerLink]="race.index"><ion-icon slot="icon-only" name="folder-outline"></ion-icon></ion-item-option>
-      <ion-item-option ><ion-icon slot="icon-only" name="trash-outline"></ion-icon></ion-item-option>
-    </ion-item-options>
-    </ion-item-sliding>
+
+      <ion-item *ngFor="let race of (this.raceservice.getAllRaces())" [routerLink]="race.index">
+        <ion-label>{{race.name}} </ion-label>
+      </ion-item>
+
   </ion-list>
   <ion-fab horizontal="end" vertical="bottom" slot="fixed" >
     <ion-fab-button size="small">
