--- a/src/app/pages/races/create-updaterace/create-updaterace.page.html
+++ b/src/app/pages/races/create-updaterace/create-updaterace.page.html
@@ -11,27 +11,25 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" scroll-y="true">
+  <form #Form ="ngForm">
   <ion-card>
-    <ion-card-header>
-      <ion-card-title>Edit Race</ion-card-title>
-    </ion-card-header>
     <ion-card-content>
       <ion-item >
         <ion-label position="floating">Name</ion-label>
-        <ion-input type="text" class="ion-margin-top" [(ngModel)]="this.race.name"></ion-input>
+        <ion-input required="true" type="text" class="ion-margin-top" [(ngModel)]="race.name" name="name" ></ion-input>
       </ion-item>
       <ion-grid>
         <ion-row>
           <ion-col>
             <ion-item>
               <ion-label position="floating">Size</ion-label>
-              <ion-input type="text" class="ion-margin-top" [(ngModel)]="this.race.size"></ion-input>
+              <ion-input required="true" type="text" class="ion-margin-top" [(ngModel)]="race.size" name="size"></ion-input>
             </ion-item>
           </ion-col>
           <ion-col>
             <ion-item>
               <ion-label position="floating">speed</ion-label>
-              <ion-input type="number" class="ion-margin-top" [(ngModel)]="this.race.speed"></ion-input>
+              <ion-input required="true" type="number" class="ion-margin-top" [(ngModel)]="race.speed" name="speed"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -46,13 +44,13 @@
           <ion-col class="ion-padding-end">
             <ion-item>
               <ion-label position="floating">ability score name</ion-label>
-              <ion-input type="text" class="ion-margin-top" [(ngModel)]="score.ability_score.index"></ion-input>
+              <ion-input required="true" type="text" class="ion-margin-top" [(ngModel)]="score.ability_score.index" name="ability_score"></ion-input>
             </ion-item>
           </ion-col>
           <ion-col>
             <ion-item>
               <ion-label position="floating">bonus</ion-label>
-              <ion-input type="number" class="ion-margin-top" [(ngModel)]="score.bonus"></ion-input>
+              <ion-input required="true" type="number" class="ion-margin-top" [(ngModel)]="score.bonus" name="bonus"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -67,7 +65,7 @@
           <ion-col class="ion-padding-end">
             <ion-item>
               <ion-label position="floating">proficiency name</ion-label>
-              <ion-input type="text" class="ion-margin-top" [(ngModel)]="prof.name"></ion-input>
+              <ion-input required="true" type="text" class="ion-margin-top" [(ngModel)]="prof.name" name="proficiency"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -82,14 +80,14 @@
           <ion-col class="ion-padding-end">
             <ion-item>
               <ion-label position="floating">language name</ion-label>
-              <ion-input type="text" class="ion-margin-top" [(ngModel)]="lan.name"></ion-input>
+              <ion-input required="true" type="text" class="ion-margin-top" [(ngModel)]="lan.name" name="language"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
       </ion-grid>
       <ion-item>
         <ion-label position="floating">language description</ion-label>
-        <ion-input type="text" class="ion-margin-top" [(ngModel)]="this.race.language_desc"></ion-input>
+        <ion-input required="true" type="text" class="ion-margin-top" [(ngModel)]="this.race.language_desc" name="languagedescription"></ion-input>
       </ion-item>
       <ion-item-divider class="ion-margin-top">
         <ion-label>
@@ -101,19 +99,19 @@
           <ion-col class="ion-padding-end">
             <ion-item>
               <ion-label position="floating">trait name</ion-label>
-              <ion-input type="text" class="ion-margin-top" [(ngModel)]="trait.name"></ion-input>
+              <ion-input required="true" type="text" class="ion-margin-top" [(ngModel)]="trait.name" name="trait"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
       </ion-grid>
-      <ion-tab-bar >
-        <ion-tab-button (click)="CreateUpdateRace()">
+
+        <ion-button type="submit" [disabled]="!Form.valid" (click)="CreateUpdateRace()">
           <ion-icon name="checkmark-outline"></ion-icon>
-        </ion-tab-button>
-      </ion-tab-bar>
+        </ion-button>
+
     </ion-card-content>
   </ion-card>
-
+  </form>
 
 </ion-content>
 
