--- a/src/app/pages/races/races.page.html
+++ b/src/app/pages/races/races.page.html
@@ -27,7 +27,7 @@
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="top">
-      <ion-fab-button routerLink="/">
+      <ion-fab-button routerLink="create-updaterace">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
       <ion-fab-button (click)="SearchbarActive()">
