crud operation languages not persistent

--- a/src/app/pages/races/races.page.html
+++ b/src/app/pages/races/races.page.html
@@ -30,9 +30,9 @@
       <ion-fab-button routerLink="create-updaterace">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button (click)="SearchbarActive()">
+      <!--<ion-fab-button (click)="SearchbarActive()">
         <ion-icon name="search-outline"></ion-icon>
-      </ion-fab-button>
+      </ion-fab-button>-->
     </ion-fab-list>
   </ion-fab>
 </ion-content>
