--- a/src/app/pages/languages/language/language.page.html
+++ b/src/app/pages/languages/language/language.page.html
@@ -37,4 +37,14 @@
       </ion-card-content>
     </ion-card>
   </div>
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button [routerLink]="['create-updatelanguage']">
+        <ion-icon name="create-outline"></ion-icon>
+      </ion-tab-button>
+      <ion-tab-button (click)="RemoveLan()" routerLink="/languages">
+        <ion-icon name="trash-outline"  ></ion-icon>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-content>
